<resources>
    <string name="app_name">SpeechTherapyApp</string>
    <string name="title_activity_record">Record</string>
    <string name="Recordings">Recordings</string>
    <string name="Categories">Categories</string>
    <string name="edit_rec">Edit</string>
    <string name="exp_rec">Export</string>
    <string name="rec">Tap to Record</string>
    <string name="Favourites">Favourites</string>
    <string name="Unassigned">Unassigned</string>
    <string name="Greetings">Greetings</string>
    <string name="make_rec">Make a Recording</string>
    <string name="Recorder">Recorder</string>
    <string name="Home">Home</string>
    <string name="RecName">Enter recording name</string>
    <string name="StopRec">Tap to stop Recording</string>
    <string name="title_activity_edit_new_recording">Edit recording</string>
    <string name="name_rec">Name Recording</string>
    <string name="delete_rec">Delete Recording</string>
    <string name="Preview_rec">Preview Recording</string>
    <string name="Record_again">Record again</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="name_recording">Name Recording</string>
    <string name="name">Name</string>
    <string name="enter_recording_name">Enter recording name</string>
    <string name="save_name">Save Name</string>
    <string name="add">Add a Category</string>
    <string name="tap_to_edit_categories">Tap to Edit Categories</string>
    <string name="category">Category</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="name_category">Name Category</string>
    <string name="no_rec_saved">No recordings have been saved to this Category</string>
    <string name="unassigned_recordings">Unassigned Recordings</string>
    <string name="done_editing">Done Editing</string>
</resources>
