<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/darker_gray"
    tools:context="com.example.sweng04.speachtherapyapp.Homepage">


    <!--Record Button-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:id="@+id/button"
        android:background="#003748"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableTop="@android:drawable/ic_btn_speak_now"
        android:text="@string/rec"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <!--All recordings Button-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:id="@+id/imageButton"
        android:background="#003748"
        android:text="@string/all_recordings"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--Export Button-->
    <Button
        android:text="@string/exp_rec"
        android:background="#003748"
        android:textColor="#FFFFFF"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--Edit Button-->
    <Button
        android:text="@string/edit_rec"
        android:background="#003748"
        android:textColor="#FFFFFF"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:id="@+id/button1"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <!--Greetings Button-->
    <Button
        android:text="@string/Greetings"
        android:textColor="#FFFFFF"
        android:background="#003748"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:textSize="25dp"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignTop="@+id/button7" />

    <!--Favourite Button-->
    <Button
        android:text="@string/Favourites"
        android:background="#003748"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/button7"
        android:textSize="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1" />


</RelativeLayout>
