<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/doneEdit">
        <Button
            android:id="@+id/edit_categories_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@color/buttonColour"
            android:foreground="@drawable/ripple_effect"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:text="@string/tap_to_edit_categories"
            android:onClick="editCatPress"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:foreground="@drawable/ripple_effect"
            android:onClick="unassignedClicked"
            android:text="@string/unassigned_recordings"
            android:textColor="@color/buttonColour"
            android:textSize="25sp" />

        <ListView
            android:id="@+id/edit_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/doneEdit"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/done_editing"
        android:background="@color/buttonColour"
        android:foreground="@drawable/ripple_effect"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:onClick="doneEdit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>